syntax = "proto3";
package api;
option go_package = "internal/api";

service CredentialService{
  rpc SaveCredentialsData(CredentialsData) returns (ServerResponse){}
  rpc SaveBankingData(BankingCardData) returns (ServerResponse){}
  rpc SaveTextData(TextData) returns (ServerResponse){}
  rpc SaveBinaryData(BinaryData) returns (ServerResponse){}

  rpc GetData(AllDataRequest) returns (SecretDataList) {}
}

message CredentialsData {
  string login = 1;
  string password = 2;
  string name = 3;
  repeated string metadata = 4;
  int32 id = 5;
}

message BankingCardData{
  int32 number = 1;
  string valid_till = 2;
  string cardholder_name = 3;
  int32  cvv = 4;
  string name = 5;
  repeated string metadata = 6;
  int32 id = 7;
}

message TextData {
  string data = 1;
  string name = 2;
  repeated string metadata = 3;
  int32 id = 4;
}

message BinaryData {
  bytes data = 1;
  string name = 2;
  repeated string metadata = 3;
  int32 id = 4;
}

message ServerResponse {
  ResponseStatus status = 1;
  string message = 2;
}

message AllDataRequest {}

message SecretsDataResponse {
  string name = 1;
  CredentialsData credentialsData = 2;
  BankingCardData bankingData = 3;
  TextData textData = 4;
  BinaryData binaryData = 5;
  repeated string metadata = 6;
  int32 id = 7;
}

message SecretDataList{
  repeated SecretsDataResponse secrets = 1;
}

enum ResponseStatus {
  accepted = 0;
  rejected = 1;
}
